@@ -1175,7 +1175,7 @@
 //-- AB_ANCILLA
 2039,1000,1000,0,0,0,0
 //-- AB_ADORAMUS
-2040,700:1400:2100:2800:3500:4200:4900:5600:6300:7000,500,2000,0,0,0
+2040,700:1400:2100:2800:3500:4200:4900:5600:6300:7000,500,2000,0,40000:50000:60000:70000:80000:90000:100000:110000:120000:130000,0
 //-- AB_CLEMENTIA
 2041,4000,0,0,0,120000:180000:240000,0
 //-- AB_CANTO
@@ -1250,10 +1250,6 @@
 //==========================================
 
 //===== Ranger =============================
-// NOTE: For most of the skills, cast times,
-// delays, and status durations are at the moment,
-// based on videos and other stuff, though this WILL
-// need to be remade once we have 3-1 chars on RE.
 //-- RA_ARROWSTORM
 2233,3000,0,3000,0,0,0
 //-- RA_FEARBREEZE
@@ -1290,6 +1286,35 @@
 2253,0,0,0,0,15000,250000:200000:150000:100000:50000
 //-- RA_ICEBOUNDTRAP
 2254,0,0,0,0,15000,250000:200000:150000:100000:50000
+//==========================================
+
+//===== Mechanic ===========================
+//-- NC_BOOSTKNUCKLE
+2256,500,0,0,0,0,0
+//-- NC_PILEBUNKER
+2257,0,1000,5000,0,0,0
+//-- NC_VULCANARM
+2258,0,500,0,0,0,0
+//-- NC_FLAMELAUNCHER -- Assuming 20 seconds duration of burning effect.
+2259,1600:2000:2400,1500:1000:500,0,0,20000,0
+//-- NC_COLDSLOWER -- Assuming duration for frozen and freezing effect.
+2260,1000,1000:2000:3000,0,0,5000:10000:15000,10000:15000:20000
+// -- NC_ARMSCANNON
+2261,1400:1600:1800,500:1000:1500,0,0,0,0
+//-- NC_ACCELERATION
+2262,0,0,0,0,30000:60000:90000,0
+//-- NC_SELFDESTRUCTION
+2267,3500,500,0,0,0,0
+//-- NC_INFRAREDSCAN
+2270,1000,500,15000,0,10000,0
+//-- NC_REPAIR
+2275,1000,1000,0,0,0,0
+//-- NC_AXEBOOMERANG
+2278,0,1000,5000,0,0,0
+//-- NC_POWERSWING
+2279,0,500,0,0,3000,0
+//-- NC_AXETORNADO
+2280,0,1000,0,0,0,0
 //==========================================
 
 
